<resources>
    <plurals name="numberOfProductsAvailable">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="numberOfReviewsAvailable">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
    <plurals name="numberOfOrdersAvailable">
        <item quantity="one">%d order</item>
        <item quantity="other">%d orders</item>
    </plurals>
    <string name="app_name">EcoApp</string>
    <string name="success">1907</string>
    <string name="failed">1911</string>
    <string name="repeatedAccount">1111</string>
    <string name="repeatedEmail">2222</string>
    <string name="failedEmail">2020</string>
    <string name="unvalidatedAccount">2000</string>
    <string name="facebook_app_id">518140535531488</string>
    <string name="fb_login_protocol_scheme">fb518140535531488</string>
    <string name="welcomeText">Find, Discover, Choose, and Buy anything online.</string>
    <string name="accountExist">Already have an account</string>
    <string name="join">Join Now</string>
    <string name="userName">UserName</string>
    <string name="userName_email">UserName/Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="createAccount">Create your account</string>
    <string name="continueGoogle">Continue with Google</string>
    <string name="continueFacebook">Continue with Facebook</string>
    <string name="name">Name</string>
    <string name="emailAddress">Your email address</string>
    <string name="createPassword">Create a password</string>
    <string name="infoPassword">Your password must be at least 6 characters.</string>
    <string name="incorrectPassword">The Password you entered is incorrect.</string>
    <string name="nameField">You must add a name</string>
    <string name="userNameField">You must add an userName</string>
    <string name="userNamePatternField">Don\'t use these punctuation marks</string>
    <string name="passwordPatternField">Your password must contain at least one of each (a-z, A-Z, 0-9, marks:(@#$%^&amp;+=-_))</string>
    <string name="userName_emailField">You must add an userName or email</string>
    <string name="pictureField">You must select profile picture</string>
    <string name="cropPictureField">You must crop your profile picture</string>
    <string name="emailField">You must add an email</string>
    <string name="passwordField">You must add a password</string>
    <string name="singUpSuccess">Thanks for singing up with ECommerce App! you can log in now.</string>
    <string name="singUpField">An error occurred, please try again later.</string>
    <string name="singUpRepeated">This email is already used by another user!
        please use another an email or login by this account.</string>
    <string name="createAccountRepeated">This username is already used by another user.</string>
    <string name="loginSuccess">Login Successfully</string>
    <string name="logInField">Login failed! the (userName/email) or password you entered is incorrect or your email used is incorrect.</string>
    <string name="validateAccountSuccess">Your account is validated now.</string>
    <string name="validateAccountField">An error occurred, please try again later.</string>
    <string name="validateAccountRepeated">Validate Account failed! This email is already used by another user!
        please use another an email.</string>
    <string name="user_account_not_validated_info">Validate your account first to take advantage of the application\'s features</string>
    <string name="addTokenFailed">An error occurred when add token, please try again later.</string>
    <string name="editAccountSuccess">Your account is updated.</string>
    <string name="editAccountField">An error occurred, please try again later.</string>
    <string name="editAccountRepeated">Update Account failed! This userName is already used by another user!
        please use another an userName.</string>
    <string name="checkConnection">Please check your internet connection and try again.</string>
    <string name="carted">Item added to cart ☺</string>
    <string name="unCarted">Item removed from cart 😔</string>
    <string name="Qty">Qty:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="title_account">Account</string>
    <string name="title_cart">My Cart</string>
    <string name="title_orders">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="addCart">Add To Cart</string>
    <string name="freeShipping">FREE Shipping</string>
    <string name="fulfilled">Fulfilled by Eco</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_menu">Menu</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_edit">Edit Profile</string>
    <string name="title_wish">My Wishlist</string>
    <string name="products">Products</string>
    <string name="subCategories">subCategories</string>
    <string name="sortBy">Sort by</string>
    <string name="bestMatches">Best Matches</string>
    <string name="lowToHighPrice">Price: Low to High</string>
    <string name="highToLowPrice">Price: High to Low</string>
    <string name="lowToHighOffer">Offer: Low to High</string>
    <string name="highToLowOffer">Offer: High to Low</string>
    <string name="topRated">Top Rated</string>
    <string name="newArrivals">New Arrivals</string>
    <string name="logOut">Log Out</string>
    <string name="confirm_logOut">Do you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="see_profile">See your profile</string>
    <string name="account_not_validated">Your account is not validated</string>
    <string name="validate_account_info">To validate your account continue with google or facebook</string>
    <string name="account_not_validated_info">Validate your account first to edit your profile</string>
    <string name="editAccount">Edit Account</string>
    <string name="editPassword">Edit Password</string>
    <string name="changePassword">Change your password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="subTotal">Sub Total:</string>
    <string name="checkout">Proceed To Checkout</string>
    <string name="egp">EGP</string>
    <string name="off_percent">% OFF</string>
    <string name="off">OFF</string>
    <string name="percent">%</string>
    <string name="stock">in stock</string>
    <string name="cartEmpty">Oops! 😮 Your cart is empty, you must add an item</string>
    <string name="buying_info">Validate your account first to complete the purchase information.</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="readMore">Read More</string>
    <string name="specifications">Specifications</string>
    <string name="reviews">Reviews</string>
    <string name="seeAll">See All</string>
    <string name="writeReview">Write Review</string>
    <string name="reviewGoodComment">Whats good about this product</string>
    <string name="reviewNotGoodComment">Whats not good about this product</string>
    <string name="reviewComment">Describe your experience</string>
    <string name="submitReview">Submit Review</string>
    <string name="infoRating">Tap on star to rate</string>
    <string name="reviewCommentField">You must add a review</string>
    <string name="reviewAdded">Your review added</string>
    <string name="reviewField">An error occurred, please try again later.</string>
    <string name="add_review_info">Validate your account first to Add a review.</string>
    <string name="mostHelpful">Most helpful</string>
    <string name="mostRecent">Most recent</string>
    <string name="highestRatings">Highest ratings first</string>
    <string name="lowestRatings">Lowest ratings first</string>
    <string name="ratings">Ratings</string>
    <string name="stars">of 5 stars</string>
    <string name="recentlyViewed">Recently Viewed Items</string>
    <string name="bought">People also bought</string>
    <string name="suggested">Suggested for you</string>
    <string name="upTo">Up to</string>
    <string name="price">Price</string>
    <string name="offer">Offer</string>
    <string name="category">Category</string>
    <string name="priceRange">Price Range</string>
    <string name="brand">Brand</string>
    <string name="done">Done</string>
    <string name="priceFrom">From (EGP)</string>
    <string name="minPrice">Min Price</string>
    <string name="priceTo">To (EGP)</string>
    <string name="maxPrice">Max Price</string>
    <string name="minPriceKey">minPrice</string>
    <string name="maxPriceKey">maxPrice</string>
    <string name="maxOfferKey">maxOffer</string>
    <string name="selectImage">Select Image From Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locationPermission">You must enable location permissions to select your address.</string>
    <string name="title_Address">Add New Address</string>
    <string name="title_edit_Address">Edit Address</string>
    <string name="title_selectAddress">Select Address</string>
    <string name="selectAddress">Select an address</string>
    <string name="selectCurrentPosition">Select current position</string>
    <string name="recipientName">Recipient Name</string>
    <string name="building">Building</string>
    <string name="floor">Floor (Optional)</string>
    <string name="apartment">Apartment (Optional)</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="saveAddress">Save Address</string>
    <string name="addressSelected">Address Selected: </string>
    <string name="searchAddress">Enter Address, City, Zip Code</string>
    <string name="locationField">You must specify an address to receive your order at your address.</string>
    <string name="characterPatternField">Use Character only</string>
    <string name="buildingNumberField">You must add a building number</string>
    <string name="buildingPatternField">Don\'t use these punctuation marks</string>
    <string name="floorPatternField">Use numbers only</string>
    <string name="apartmentPatternField">Don\'t use these punctuation marks</string>
    <string name="mobileNumberField">You must add a mobile number</string>
    <string name="mobileNumberIncorrect">Your mobile number must be at least 10 digits.</string>
    <string name="mobilePatternField">Use numbers only</string>
    <string name="nameRecipientField">You must add a recipient name</string>
    <string name="myLocation">My Location</string>
    <string name="title_verification_mobile">Verification</string>
    <string name="send_verification_code">We will send a verification code for the below number:</string>
    <string name="edit_mobile">(Edit)</string>
    <string name="send_verification">Send Verification SMS</string>
    <string name="message_code">A message has been sent to:</string>
    <string name="verification_code">Enter verification code</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="resend_code">Resend code</string>
    <string name="title_order">Order summary</string>
    <string name="standardDomestic">Standard Domestic Shipping Service</string>
    <string name="soldBy">Sold by: </string>
</resources>