<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/whiteColor"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="Sort by"
                android:textColor="@color/blackColor" />

            <CheckedTextView
                android:id="@+id/sort_best_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMarkTint="@color/whiteColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/bestMatches"
                android:textColor="@color/blackColor" />

            <CheckedTextView
                android:id="@+id/sort_price_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMarkTint="@color/whiteColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/lowToHighPrice"
                android:textColor="@color/blackColor" />

            <CheckedTextView
                android:id="@+id/sort_price_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMarkTint="@color/whiteColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/highToLowPrice"
                android:textColor="@color/blackColor" />


            <CheckedTextView
                android:id="@+id/sort_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMarkTint="@color/whiteColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/topRated"
                android:textColor="@color/blackColor" />


            <CheckedTextView
                android:id="@+id/sort_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMarkTint="@color/whiteColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/newArrivals"
                android:textColor="@color/blackColor" />


        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logoApp_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/ic_launcher_app_icon"
            android:layout_gravity="center|top" />
    </FrameLayout>

</LinearLayout>