<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecommerceapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="categoryId"
            android:defaultValue="None" />
        <argument
            android:name="categoryName"
            android:defaultValue="None" />
       <action
            android:id="@+id/action_navigation_home_to_subCategoryFragment"
            app:destination="@id/subCategoryFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>


    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.ecommerceapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.ecommerceapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.ecommerceapp.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ecommerceapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/subCategoryFragment"
        android:name="com.example.ecommerceapp.ui.home.SubCategoryFragment"
        android:label="SubCategoryFragment">

        <argument
            android:name="subCategoryId"
            android:defaultValue="None" />
        <argument
            android:name="subCategoryName"
            android:defaultValue="None" />
        <argument
            android:name="products"
            android:defaultValue="None" />

        <action
            android:id="@+id/action_subCategoryFragment_to_productFragment"
            app:destination="@id/productFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.ecommerceapp.ui.home.ProductsFragment"
        android:label="ProductFragment" />
</navigation>
