<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity"
        android:background="@drawable/welcome_background">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@mipmap/ic_launcher_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welcomeText"
            android:textSize="25sp"
            android:textColor="@color/basicColor"
            android:gravity="center"
            android:textStyle="bold|italic" />


        <Button
            android:id="@+id/joinAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/openAppButton"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/join"
            android:textSize="20sp"
            android:textColor="@color/whiteColor"
            android:background="@drawable/background_simple_button" />

        <Button
            android:id="@+id/openAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/accountExist"
            android:textSize="20sp"
            android:textColor="@color/whiteColor"
            android:background="@drawable/background_button" />

    </RelativeLayout>
</layout>