<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_background"
        tools:context=".ui.main.RegisterActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:weightSum="8">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/whiteColor">
                <EditText
                    android:id="@+id/register_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_simple_button"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/whiteColor">
                <EditText
                    android:id="@+id/register_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_simple_button"
                    android:hint="@string/userName"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/whiteColor"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@+id/password"
                    android:background="@drawable/background_simple_button"
                    android:hint="@string/createPassword"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                    android:layout_alignParentRight="true"
                    android:layout_alignLeft="@+id/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/infoPassword"
                android:textColor="@color/whiteColor"
                android:textStyle="bold" />
            <Button
                android:id="@+id/register_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:padding="10dp"
                android:text="@string/createAccount"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/basicColor"
                android:textStyle="bold" />

            <fragment
                android:id="@+id/register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.example.ecommerceapp.ui.main.AccountFragment"
                android:layout_weight="1" />

        </LinearLayout>
    </RelativeLayout>
</layout>