<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_button2">

        <TextView
            android:id="@+id/sortBy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_simple_button2"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:text="@string/sortBy"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortBy_tv">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/sort_most_helpful"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:checked="true"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_button"
                    android:gravity="start|center"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:text="@string/mostHelpful"
                    android:textColor="@color/color_text_view" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/sort_most_recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_button"
                    android:gravity="start|center"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:text="@string/mostRecent"
                    android:textColor="@color/color_text_view"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/sort_highest_ratings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_button"
                    android:gravity="start|center"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:text="@string/highestRatings"
                    android:textColor="@color/color_text_view" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/sort_lowest_ratings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_button"
                    android:gravity="start|center"
                    android:padding="15dp"
                    android:layout_margin="5dp"
                    android:text="@string/lowestRatings"
                    android:textColor="@color/color_text_view" />
            </RadioGroup>


        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPicture_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_app_icon_round" />

    </RelativeLayout>
</layout>